        Students: added data visualisation for student enrolment over time
        Students: fixed auto-assign houses potentially failing on Application Form acceptance if houses are empty
        Students: fixed PHP notice for gibbonPersonID in Add Medical Form
        Students: fixed link to Add Medical Form in Student Profile
		Timetable: fixed TT not being navigable if user is not involved in any timetable
		Timetable Admin: fix bulk checking bug in Tie Days to Dates
		Timetable Admin: widened listing of staff in Course Enrolment by Person to include all staff (not just Teaching staff)
		Timetable: added option to display either Day Of The Week or Timetable Day Short Name in column header of timetables
		Timetable: added name of person making a facility booking to timetable view by Person
		Timetable: added optional permission for users to only view their own timetable
		Timetable: added optional permission for parents to only view their children's timetables
		Timetable: increased list of students in Manage Student Enrolment to include all current students
		Tracking: fixed bugs leading to repeated and mixed display of columns
		User Admin: fixed bug preventing some custom fields appearing when individual had multiple categories in multiple roles
		User Admin: fixed PHP Notice error caused when no additional roles chosen in user edit
		User Admin: added ability to restrict which roles can be assigned in Manage Users
		User Admin: reduced Transport auto suggest to students enroled in the current year
		User Admin: added settings to enable/disable scholarships, payment and SEN sections in Application Form
		User Admin: fixed issue preventing inactive students from showing up when family link is clicked
        User Admin: added row highlighting in Manage Permissions

v13.0.02
--------
	Security
		System: fixed PHP code execution vulnerability
		System: fixed infinite nested index reload bug

v13.0.01
--------
	Tweaks & Bug Fixes