@@ -919,10 +919,11 @@ if (isActionAccessible($guid, $connection2, '/modules/Students/applicationForm_m
 
     if ($privacySetting == 'Y' && !empty($privacyBlurb) && !empty($privacyOptions)) {
         $options = array_map(function($item) { return trim($item); }, explode(',', $privacyOptions));
+        $checked = array_map(function($item) { return trim($item); }, explode(',', $application['privacy']));
 
         $row = $form->addRow();
             $row->addLabel('privacyOptions[]', __('Privacy'))->description($privacyBlurb);
-            $row->addCheckbox('privacyOptions[]')->fromArray($options);
+            $row->addCheckbox('privacyOptions[]')->fromArray($options)->checked($checked);
     }
 
     // ⋆⋆⋆ Magic ⋆⋆⋆
