@@ -504,11 +504,11 @@ if (isActionAccessible($guid, $connection2, '/modules/Students/applicationForm_m
                 $privacyOptions = $_POST['privacyOptions'];
                 foreach ($privacyOptions as $privacyOption) {
                     if ($privacyOption != '') {
-                        $privacy .= $privacyOption.', ';
+                        $privacy .= $privacyOption.',';
                     }
                 }
                 if ($privacy != '') {
-                    $privacy = substr($privacy, 0, -2);
+                    $privacy = substr($privacy, 0, -1);
                 } else {
                     $privacy = null;
                 }
