@@ -120,6 +120,7 @@ v14.0.00
         Students: fixed auto-assign houses potentially failing on Application Form acceptance if houses are empty
         Students: fixed PHP notice for gibbonPersonID in Add Medical Form
         Students: fixed link to Add Medical Form in Student Profile
+        Students: updated Edit Application Form to handle spaces in privacy options csv
 		Timetable: fixed TT not being navigable if user is not involved in any timetable
 		Timetable Admin: fix bulk checking bug in Tie Days to Dates
 		Timetable Admin: widened listing of staff in Course Enrolment by Person to include all staff (not just Teaching staff)
